--- a/package.json
+++ b/package.json
@@ -1,39 +1,28 @@
 {
-  "name": "@martindoyleuk/web-toolkit",
-  "version": "0.0.1",
-  "description": "Configuration files and utilities for web projects, especially React based",
-  "main": "dist/index.js",
+  "name": "@martindoyle/tsconfig",
+  "version": "1.0.0",
+  "description": "Common TSConfig files",
   "files": [
-    "commitlint.config.js",
-    ".prettierrc.js"
+    "node-app.json",
+    "node-lib.json",
+    "web-app.json",
+    "web-lib.json"
   ],
   "scripts": {
-    "hook:pre-commit": "npm run prettier:check",
-    "prepare": "husky install",
-    "prettier:base": "prettier --config .prettierrc.js --no-editorconfig --ignore-path .gitignore --ignore-unknown \"**/*.*\"",
-    "prettier:check": "npm run prettier:base -- --check",
-    "prettier:write": "npm run prettier:base -- --write",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/MartinDoyleUK/web-toolkit.git"
+    "url": "git+https://github.com/MartinDoyleUK/martindoyle-tsconfig.git"
   },
   "keywords": [
-    "config"
+    "config",
+    "tsconfig"
   ],
   "author": "Martin Doyle",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/MartinDoyleUK/web-toolkit/issues"
+    "url": "https://github.com/MartinDoyleUK/martindoyle-tsconfig/issues"
   },
-  "homepage": "https://github.com/MartinDoyleUK/web-toolkit#readme",
-  "devDependencies": {
-    "@commitlint/cli": "^12.0.1",
-    "@commitlint/config-conventional": "^12.0.1",
-    "husky": "^5.2.0",
-    "npm-run-all": "^4.1.5",
-    "prettier": "^2.2.1",
-    "standard-version": "^9.1.1"
-  }
+  "homepage": "https://github.com/MartinDoyleUK/martindoyle-tsconfig#README.md",
 }
