Add _base.json to the published files

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "url": "git+https://github.com/MartinDoyleUK/martindoyle-tsconfig.git"
   },
   "files": [
+    "_base.json",
     "node.json",
     "web.json"
   ],
